Updated keycloak version to 22.0.3 and set environment variable JAVA_OPTS = -Dnet.bytebuddy.experimental=true (temp until keycloak uses updated version)